--- a/src/components/taskAgGrid/taskAgGrid.css
+++ b/src/components/taskAgGrid/taskAgGrid.css
@@ -1,8 +1,9 @@
 
 .ag-theme-alpine {
   width: 100% !important;
-  height: 100%;
-  min-height: 500px;
+  height: auto; 
+  min-height: auto; 
+  /* max-height: 70vh;  */
   border-radius: 12px;
   overflow: hidden;
   background-color: white;
