--- a/src/components/taskDetails/TaskDetails.css
+++ b/src/components/taskDetails/TaskDetails.css
@@ -39,7 +39,7 @@
   .task-details-grid p {
     margin: 0;
     background: #f9f9f9;
-    padding: 8px 12px;
+    /* padding: 8px 12px; */
     border-radius: 8px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   }
@@ -47,12 +47,13 @@
   .comment-section {
     margin-top: 20px;
     border-top: 2px solid #ddd;
-    padding-top: 20px;
+    /* padding-top: 20px; */
   }
   
   button.add-comment-btn {
+    margin-top: 2px;
     background: #783db4;
-    margin-bottom: 2%;
+    margin-bottom: 2px;
     color: #fff;
     padding: 10px 20px;
     border-radius: 8px;
