--- a/src/pages/employeeManagement/EmployeeManagement.css
+++ b/src/pages/employeeManagement/EmployeeManagement.css
@@ -6,6 +6,14 @@
 .search-input:focus {
   border-color: #042486;
 }
+.employees-page-container {
+  min-height: calc(100vh - 70px);  
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  box-sizing: border-box;
+  background: #f0f2f5;
+}
 .search-input-container {
   position: relative;
   display: inline-block;
@@ -50,7 +58,7 @@
 
 .actions-bar {
   margin-top: 2%;
-  margin-bottom: 2%;
+  /* margin-bottom: 2%; */
   display: flex;
   gap: 10px;
   justify-content: space-between; 
