--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -7,9 +7,9 @@ html {
 
 .login-box {
   margin: 0 auto;
-  margin-top: 5%;
+  /* margin-top: 5%; */
   width: 420px;
-  padding: 40px 30px;
+  padding: 10px 30px;
   background: #ffffff;
   box-shadow: 0 12px 35px rgba(0, 0, 0, 0.15);
   border-radius: 18px;
@@ -26,7 +26,7 @@ html {
 
 .close-form {
   position: absolute;
-  top: 60px;
+  top: 30px;
   left: 30px;
   background: transparent;
   border: none;
