--- a/src/pages/alertsPage/AlertsPage.css
+++ b/src/pages/alertsPage/AlertsPage.css
@@ -1,6 +1,7 @@
 .alerts-container {
   min-height: calc(100vh - 70px);
-  max-width: 100%;
+
+  max-width: 900px;
   margin: 0 auto;
   padding: 20px;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
