--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -222,6 +222,9 @@
 .side-popup.hidden {
   transform: translateX(100%);
 }
+.close-edit {
+  margin-top: 33px;
+}
 
 .close-btn {
   background: linear-gradient(135deg, #ff6b6b, #ee5a52);
