--- a/src/pages/alertsPage/AlertsPage.css
+++ b/src/pages/alertsPage/AlertsPage.css
@@ -61,12 +61,14 @@
   padding: 8px 12px;
   border: none;
   background: #ddd;
-  border-radius: 4px;
+  border-radius: 50%;
   cursor: pointer;
 }
 
 .pagination button.active {
   background: #3498db;
+  border: 1px solid black;
+
   color: #fff;
 }
 
