--- a/src/pages/recyclingBin/RecyclingBin.css
+++ b/src/pages/recyclingBin/RecyclingBin.css
@@ -245,7 +245,7 @@ body {
 }
 
 @keyframes highlightAnimation {
-  0% { background-color: rgba(255, 255, 0, 0.7); }
+  0% { background-color: rgb(255, 255, 0); }
   100% { background-color: transparent; }
 }
 
