--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -804,7 +804,7 @@
 
 .highlighted-row {
   animation: highlightAnimation 3s ease;
-  background-color: rgba(255, 255, 0, 0.3); 
+  background-color: rgb(255, 255, 0); 
 }
 
 @keyframes highlightAnimation {
