--- a/src/pages/tasks/Tasks.css
+++ b/src/pages/tasks/Tasks.css
@@ -802,7 +802,7 @@
   animation: fadeInUp 1s ease-out;
 }
 
-.highlighted-row {
+/* .highlighted-row {
   animation: highlightAnimation 3s ease;
   background-color: rgb(255, 255, 0); 
 }
@@ -810,4 +810,4 @@
 @keyframes highlightAnimation {
   0% { background-color: rgba(255, 255, 0, 0.7); }
   100% { background-color: transparent; }
-}
+} */
